fixed flicker bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,6 +37,11 @@ body,
   background-color: #29272c;
 }
 
+/* Header styles */
+.header-format {
+  height: 50px;
+}
+
 /* Editor classes */
 #root {
   display: flex;
